Fix formatting of whitespace errors
The class name needs to be obfuscated when we render the text.

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -71,14 +71,6 @@
   white-space: nowrap;
 }
 
-.visualtab {
-  border: 1px dotted red;
-}
-
-.whitespaceerror {
-  background: red;
-}
-
 .inputFieldTypeHint {
   color: grey;
 }
